# boga-quotes

./: .pre-commit-config.yaml  .pyproject.toml  Dockerfile  README.md  compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-feature-request.md  3-enhancement-request.md
.github/workflows/: semver.yml
boga_quotes/: main.py
